continue refactoring services, isolate repositories